--- a/index.html
+++ b/index.html
@@ -4,27 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minecraft</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
-    <link rel="icon" href="img/favicon.png">
+    <title>Minecraft</title>
+    <link 
+    rel="icon" 
+    href="img/favicon.png"
+    >
 </head>
 <body>
-    <div class="container">
-        <div class="painel-login">
-            <div class="form">
-                <img src="/img/logo-minecraft.png" alt="Logo do minecraft" height="60px">
-                <input type="email" alt="email"><span>Email</span><br><br>
-                <input type="password" alt="senha"><span>Senha</span>
-                <button>CONECTE-SE</button>
-                <p><strong>Não tem uma conta? Registrar-se</strong></p>
-                <h3>CONTAGEM SEM LOGIN ></h3>
+    <main class="wrapper">
+
+        <div class="coluna-geral">
+            <div class="painel-login">
+                <div class="logo-center">
+                    <div class="btn-painel">
+                            <img src="img/logo-minecraft.png" width="300" height="50" class="logo">
+                            <span>Email</span>
+                            <br>
+                            <input type="text" name="email" alt="Sua email.." class="input-form">
+                            <br>
+                            <br>
+                            <span>Senha</span>
+                            <br>
+                            <input type="password" name="senha" alt="Sua senha.." class="input-form">
+                            <br>
+                            <br>
+                            <input type="checkbox" name="salva" alt="manter me conectado">
+                            <b>Mantenha-me conectado</b>
+                            <br>
+                            <br>
+                            <button type="submit">CONECTE-SE</button>
+                            <br>
+                            <br>
+                            <p>Não tem uma conta? inscrevar-se</p>
+                            <br>
+                            <h3><a href="#">CONTAGEM SEM LOGIN →</a></h3>
+                    </div>
+                </div>
             </div>
-            <div class="check"><input type="checkbox" alt="checkbox"> Mantenha-me conectado</div>
         </div>
-    </div>
-    <section class="fundo"></section>
+      <section class="fundo"></section>
+
+    </main>
 </body>
 </html>
