--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
@@ -14,40 +15,38 @@
     href="img/favicon.png"
     >
 </head>
+
 <body>
-    <main class="wrapper">
+    <main class="embrulho">
 
         <div class="coluna-geral">
             <div class="painel-login">
-                <div class="logo-center">
-                    <div class="btn-painel">
-                            <img src="img/logo-minecraft.png" width="300" height="50" class="logo">
-                            <span>Email</span>
-                            <br>
-                            <input type="text" name="email" alt="Sua email.." class="input-form">
-                            <br>
-                            <br>
-                            <span>Senha</span>
-                            <br>
-                            <input type="password" name="senha" alt="Sua senha.." class="input-form">
-                            <br>
-                            <br>
-                            <input type="checkbox" name="salva" alt="manter me conectado">
-                            <b>Mantenha-me conectado</b>
-                            <br>
-                            <br>
-                            <button type="submit">CONECTE-SE</button>
-                            <br>
-                            <br>
-                            <p>Não tem uma conta?<b>&nbsp;<a href="#">Inscrevar-se</a></b></p>
-                            <br>
-                            <h3><a href="#">CONTAGEM SEM LOGIN →</a></h3>
-                    </div>
-                </div>
+                <img src="img/logo-minecraft.png" width="300" height="50" class="logo">
+                <span>Email</span>
+                <br>
+                <input type="text" name="email" alt="Sua email.." class="input-form">
+                <br>
+                <br>
+                <span>Senha</span>
+                <br>
+                <input type="password" name="senha" alt="Sua senha.." class="input-form">
+                <br>
+                <br>
+                <input type="checkbox" name="salva" alt="manter me conectado">
+                <b>Mantenha-me conectado</b>
+                <br>
+                <br>
+                <button type="submit">CONECTE-SE</button>
+                <br>
+                <br>
+                <p>Não tem uma conta?<b>&nbsp;<a href="#">Inscrevar-se</a></b></p>
+                <br>
+                <h3><a href="#">CONTAGEM SEM LOGIN →</a></h3>
             </div>
         </div>
-      <section class="fundo"></section>
+        <section class="fundo"></section>
 
     </main>
 </body>
+
 </html>
