--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <img src="img/logo-minecraft.png" width="300" height="50" class="logo">
                 <span>Email</span>
                 <br>
-                <input type="text" name="email" alt="Sua email.." class="input-form">
+                <input type="text" name="email" alt="Seu email.." class="input-form">
                 <br>
                 <br>
                 <span>Senha</span>
