--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <button type="submit">CONECTE-SE</button>
                 <br>
                 <br>
-                <p>Não tem uma conta?<b>&nbsp;<a href="#">Inscrevar-se</a></b></p>
+                <p>Não tem uma conta?<strong><a href="#">&nbsp;Inscrevar-se</a></strong></p>
                 <br>
                 <h3><a href="#">CONTAGEM SEM LOGIN →</a></h3>
             </div>
