--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                 <img src="img/logo-minecraft.png" width="300" height="50" class="logo">
                 <span>Email</span>
                 <br>
-                <input type="text" name="email" alt="Seu email.." class="input-form">
+                <input type="text" name="email" alt="Seu email.." class="input-form" maxlength="40">
                 <br>
                 <br>
                 <span>Senha</span>
                 <br>
-                <input type="password" name="senha" alt="Sua senha.." class="input-form">
+                <input type="password" name="senha" alt="Sua senha.." class="input-form" maxlength="32">
                 <br>
                 <br>
                 <input type="checkbox" name="salva" alt="manter me conectado">
@@ -41,10 +41,11 @@
                 <br>
                 <p>Não tem uma conta?<strong><a href="#">&nbsp;Inscrevar-se</a></strong></p>
                 <br>
-                <h3><a href="#">CONTAGEM SEM LOGIN →</a></h3>
+                <h3><a href="#">CONECTE-SE SEM LOGIN →</a></h3>
             </div>
         </div>
 
+    <audio src="audio/music.mp3" autoplay></audio>
     </main>
 </body>
 
