--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
         </div>
 
-    <audio src="audio/music.mp3" autoplay></audio>
+    <audio src="audio/music.mp3" autoplay type="audio/mpeg"></audio>
     </main>
 </body>
 
