--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
             </div>
         </div>
 
-    <audio src="audio/music.mp3" autoplay type="audio/mpeg"></audio>
+    <audio controls>
+      <source src="audio.mp3" type="audio/mpeg">
+    </audio>
     </main>
 </body>
 
