--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
 
     <audio controls>
-      <source src="audio.mp3" type="audio/mpeg">
+      <source src="audio.mp3" type="audio/mpeg" autoplay>
     </audio>
     </main>
 </body>
