--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@
                 <h3><a href="#">CONECTE-SE SEM LOGIN →</a></h3>
             </div>
         </div>
-
-    <audio controls>
-      <source src="audio.mp3" type="audio/mpeg" autoplay>
-    </audio>
+      <audio src="audio.mp3" type="audio/mpeg" autoplay>
     </main>
 </body>
 
